--- a/.classpath
+++ b/.classpath
@@ -72,5 +72,6 @@
 	<classpathentry kind="lib" path="lib/pbox2d.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.6.4.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-nop-1.6.4.jar"/>
+	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
